excel project user ekle,excel create

--- a/RabbitMq.ExcelCreate/RabbitMq.ExcelCreate.csproj
+++ b/RabbitMq.ExcelCreate/RabbitMq.ExcelCreate.csproj
@@ -12,7 +12,13 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\" />
+    <Folder Include="wwwroot\files\" />
   </ItemGroup>
 
 </Project>
