--- a/RabbitMq.ExcelCreate/appsettings.json
+++ b/RabbitMq.ExcelCreate/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlServer": "Data Source=TCMX-DSTK-AY;Initial Catalog=RabbitMqExcel;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
