create excel upload

--- a/RabbitMq.ExcelCreate/RabbitMq.ExcelCreate.csproj
+++ b/RabbitMq.ExcelCreate/RabbitMq.ExcelCreate.csproj
@@ -17,8 +17,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
     <Folder Include="wwwroot\files\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Shared\Shared.csproj" />
   </ItemGroup>
 
 </Project>
