--- a/RabbitMq.ExcelCreate/appsettings.json
+++ b/RabbitMq.ExcelCreate/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Data Source=TCMX-DSTK-AY;Initial Catalog=RabbitMqExcel;Integrated Security=True"
+    "SqlServer": "Data Source=TCMX-DSTK-AY;Initial Catalog=RabbitMqExcel;Integrated Security=True",
+    "RabbitMq": "amqps://ydjrybtk:Pv1BXcTsd8qe6MNRpWJr0rTvZQ4vWidU@cougar.rmq.cloudamqp.com/ydjrybtk"
+
   },
   "Logging": {
     "LogLevel": {
